--- a/about.html
+++ b/about.html
@@ -14,25 +14,11 @@
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
-    <nav class="bg-white border-b py-4 px-6 sticky top-0 z-50">
-        <div class="max-w-6xl mx-auto flex justify-between items-center">
-            <a href="index.html" class="font-bold text-xl tracking-tight text-slate-900">
-                Founder<span class="text-blue-600">Calculators</span>
-            </a>
-            <div class="hidden md:flex items-center space-x-6 text-sm font-medium text-slate-600">
-                <a href="index.html#finance" class="standard-link">Finance</a>
-                <a href="index.html#growth" class="standard-link">Growth</a>
-                <a href="index.html#ops" class="standard-link">Operations</a>
-                <div class="h-4 w-px bg-slate-200 mx-2"></div>
-                <a href="about.html" class="text-blue-600 font-bold">About</a>
-                <a href="contact.html" class="standard-link">Contact</a>
-            </div>
-        </div>
-    </nav>
+    <script src="/nav.js"></script>
 
     <main class="max-w-4xl mx-auto px-6 py-16">
         <header class="mb-12">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-slate-900 mb-6 tracking-tight">
+            <h1 class="text-4xl md:text-5xl font-extrabold text-slate-900 mb-6 tracking-tight leading-tight">
                 Empowering Founders with <span class="text-blue-600">Actionable Math.</span>
             </h1>
             <p class="text-xl text-slate-600 leading-relaxed">
@@ -95,13 +81,13 @@
         <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12 text-left">
             <div>
                 <p class="font-bold mb-4 text-slate-900 text-lg">FounderCalculators.com</p>
-                <p class="text-sm leading-relaxed">Helping founders build sustainable, profitable businesses through better math.</p>
+                <p class="text-sm leading-relaxed">Helping founders build sustainable businesses through financial literacy and better modeling.</p>
             </div>
             <div>
                 <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
                 <ul class="text-sm space-y-2">
                     <li><a href="about.html" class="text-blue-600 font-bold">About Us</a></li>
-                    <li><a href="contact.html" class="standard-link">Contact Support</a></li>
+                    <li><a href="contact.html" class="standard-link">Contact</a></li>
                     <li><a href="index.html#finance" class="standard-link">Financial Tools</a></li>
                 </ul>
             </div>
