--- a/guides.html
+++ b/guides.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Founder Guides – SaaS Metrics, Benchmarks & Growth Explained</title>
-    <meta name="description" content="Practical founder guides to understand MRR, churn, LTV:CAC, CAC payback, Rule of 40, and more. No fluff, just actionable insights.">
+    <meta name="description" content="Practical founder guides to understand MRR, churn, LTV:CAC, CAC payback, Rule of 40, NRR, and more. No fluff, just actionable insights.">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .standard-link { transition: color 0.2s; }
