--- a/Guides/metrics-before-10k-mrr.html
+++ b/Guides/metrics-before-10k-mrr.html
@@ -1,1 +1,168 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Metrics That Matter Before $10k MRR (Don’t Obsess Over Vanity) – Founder Guides</title>
+    <meta name="description" content="Before $10k MRR, most SaaS metrics are noise. Here's what actually matters, what to ignore, and how to know if you're on the right path.">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .standard-link { transition: color 0.2s; }
+        .standard-link:hover { color: #2563eb; text-decoration: underline; }
+        .good-tag { color: #10b981; font-weight: bold; }
+        .caution-tag { color: #f59e0b; font-weight: bold; }
+        .danger-tag { color: #ef4444; font-weight: bold; }
+    </style>
+</head>
+<body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
+    <script src="/nav.js"></script>
+
+    <main class="max-w-4xl mx-auto px-6 py-16 prose prose-slate max-w-none">
+        <header class="mb-12 text-center">
+            <h1 class="text-4xl md:text-5xl font-extrabold mb-6 tracking-tight">Metrics That Matter Before $10k MRR (Don’t Obsess Over Vanity)</h1>
+            <p class="text-xl text-slate-600 mb-4">Before $10k MRR, most founders waste time tracking the wrong numbers. Here's what actually predicts survival — and what you can safely ignore.</p>
+            <p class="text-base text-slate-500 italic">Even 5–10 paying customers consistently can validate your business idea more than any growth chart.</p>
+            <p class="text-base text-slate-500 italic">Written by people who’ve been stuck at $2k–$8k MRR for months (and finally broke through).</p>
+        </header>
+
+        <section>
+            <h2 class="text-3xl font-bold mb-6">The trap most founders fall into pre-$10k</h2>
+            <p>
+                You launch, get a few paying customers, see $3k MRR, and suddenly you're obsessing over:
+            </p>
+            <ul class="list-disc pl-6 space-y-2 mt-4">
+                <li>Vanity growth rate (MoM %)</li>
+                <li>Exact LTV:CAC ratio</li>
+                <li>Rule of 40 score</li>
+                <li>Burn multiple</li>
+            </ul>
+            <p class="mt-6">
+                None of these are useful yet. At this stage, your business is still proving it can exist — not scale.
+            </p>
+        </section>
+
+        <section class="mt-16">
+            <h2 class="text-3xl font-bold mb-6">The only 5 metrics that matter before $10k MRR</h2>
+            <div class="space-y-10">
+                <div class="bg-white border border-slate-200 rounded-xl p-8">
+                    <h3 class="text-2xl font-bold mb-4">1. Customer Retention (not churn rate yet)</h3>
+                    <p class="text-slate-700">
+                        Do people keep paying after month 1? Month 3? Month 6?
+                    </p>
+                    <ul class="list-disc pl-6 space-y-2 mt-4">
+                        <li><span class="good-tag">Good:</span> >70% still paying after 3 months</li>
+                        <li><span class="caution-tag">Caution:</span> 50–70%</li>
+                        <li><span class="danger-tag">Red flag:</span> <50% after 3 months</li>
+                    </ul>
+                    <p class="mt-4 italic text-slate-600">
+                        If retention is bad, no amount of acquisition saves you. Fix product first.
+                    </p>
+                    <p class="mt-4">
+                        <a href="/churn-impact.html" class="standard-link text-blue-600">Track retention using this simple 3-month cohort calculator →</a>
+                    </p>
+                </div>
+
+                <div class="bg-white border border-slate-200 rounded-xl p-8">
+                    <h3 class="text-2xl font-bold mb-4">2. First-Value Time (how fast users see value)</h3>
+                    <p class="text-slate-700">
+                        How long from signup to first meaningful outcome (e.g., first invoice sent, first report generated)?
+                    </p>
+                    <ul class="list-disc pl-6 space-y-2 mt-4">
+                        <li><span class="good-tag">Good:</span> <7 days for most SaaS</li>
+                        <li><span class="danger-tag">Red flag:</span> >30 days</li>
+                    </ul>
+                    <p class="mt-4 italic text-slate-600">
+                        Longer first-value time = higher churn. Speed this up before anything else.
+                    </p>
+                </div>
+
+                <div class="bg-white border border-slate-200 rounded-xl p-8">
+                    <h3 class="text-2xl font-bold mb-4">3. Paying Conversion Rate (trial → paid)</h3>
+                    <p class="text-slate-700">
+                        What % of signups or trials become paying customers?
+                    </p>
+                    <ul class="list-disc pl-6 space-y-2 mt-4">
+                        <li><span class="good-tag">Good:</span> 10–25% (varies by product)</li>
+                        <li><span class="danger-tag">Red flag:</span> <5%</li>
+                    </ul>
+                    <p class="mt-4 italic text-slate-600">
+                        If this is low, fix onboarding, pricing, or product before spending on acquisition.
+                    </p>
+                </div>
+
+                <div class="bg-white border border-slate-200 rounded-xl p-8">
+                    <h3 class="text-2xl font-bold mb-4">4. Gross Margin (early signal of unit economics)</h3>
+                    <p class="text-slate-700">
+                        Revenue minus cost of serving customers (hosting, support, payment fees).
+                    </p>
+                    <ul class="list-disc pl-6 space-y-2 mt-4">
+                        <li><span class="good-tag">Good:</span> >60–70%</li>
+                        <li><span class="danger-tag">Red flag:</span> <50%</li>
+                    </ul>
+                    <p class="mt-4 italic text-slate-600">
+                        Low gross margin means even if you get to $10k MRR, profitability is impossible without massive changes.
+                    </p>
+                </div>
+
+                <div class="bg-white border border-slate-200 rounded-xl p-8">
+                    <h3 class="text-2xl font-bold mb-4">5. Customer Feedback Loops (qualitative over quantitative)</h3>
+                    <p class="text-slate-700">
+                        Are customers telling you they love it? Are they referring others? Are they willing to pay more?
+                    </p>
+                    <p class="mt-4 italic text-slate-600">
+                        At this stage, qualitative signals trump quantitative ones. NPS >8, strong testimonials, and organic referrals matter more than any dashboard number.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="my-16 text-center bg-white border border-slate-200 rounded-2xl p-10 shadow-sm">
+            <h3 class="text-2xl font-bold mb-6">Track Your Early Metrics</h3>
+            <a href="/unit-economics.html" class="inline-block bg-blue-600 text-white px-10 py-5 rounded-xl font-bold text-lg hover:bg-blue-700 transition">
+                Open Unit Economics Guide →
+            </a>
+            <p class="text-sm text-slate-500 mt-4">
+                Start with the basics — gross margin, retention, and conversion — before obsessing over advanced metrics.
+            </p>
+        </section>
+
+        <section class="mt-12">
+            <h3 class="text-xl font-bold mb-6">Related Reading & Tools</h3>
+            <ul class="space-y-3">
+                <li><a href="/unit-economics.html" class="standard-link text-blue-600">Unit Economics Guide (Live Tool)</a></li>
+                <li><a href="/guides/what-mrr-actually-tells-you.html" class="standard-link text-blue-600">What MRR Actually Tells You (and What It Doesn’t)</a></li>
+                <li><a href="/guides/healthy-churn-benchmarks.html" class="standard-link text-blue-600">Healthy Churn Benchmarks by SaaS Stage</a></li>
+                <li><a href="/guides/ltv-cac-real-math.html" class="standard-link text-blue-600">How to Interpret LTV:CAC Without Lying to Yourself</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="bg-white border-t py-16 text-slate-500">
+        <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12 text-left">
+            <div>
+                <p class="font-bold mb-4 text-slate-900 text-lg">FounderCalculators.com</p>
+                <p class="text-sm leading-relaxed">Helping founders build sustainable businesses through financial literacy and better modeling.</p>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="about.html" class="standard-link">About Us</a></li>
+                    <li><a href="contact.html" class="standard-link">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Legal</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="privacy.html" class="standard-link">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="standard-link">Terms of Service</a></li>
+                    <li><a href="disclaimer.html" class="standard-link">Earnings Disclaimer</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-12 pt-8 border-t border-slate-100 text-center px-6">
+            <p class="text-xs uppercase tracking-widest opacity-50">&copy; 2026 FounderCalculators. All Rights Reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
