--- a/Guides/gross-margin-benchmarks-by-industry.html
+++ b/Guides/gross-margin-benchmarks-by-industry.html
@@ -1,1 +1,154 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gross Margin Benchmarks by Industry – Realistic 2026 Numbers – Founder Guides</title>
+    <meta name="description" content="What 'good' gross margin looks like in SaaS, e-commerce, agencies, marketplaces, and more in 2026. Realistic benchmarks and what to do if yours is too low.">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .standard-link { transition: color 0.2s; }
+        .standard-link:hover { color: #2563eb; text-decoration: underline; }
+        .good-tag { color: #10b981; font-weight: bold; }
+        .caution-tag { color: #f59e0b; font-weight: bold; }
+        .danger-tag { color: #ef4444; font-weight: bold; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { padding: 12px; border-bottom: 1px solid #e2e8f0; text-align: left; }
+        th { background-color: #f8fafc; font-weight: bold; }
+    </style>
+</head>
+<body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
+    <script src="/nav.js"></script>
+
+    <main class="max-w-4xl mx-auto px-6 py-16 prose prose-slate max-w-none">
+        <header class="mb-12 text-center">
+            <h1 class="text-4xl md:text-5xl font-extrabold mb-6 tracking-tight">Gross Margin Benchmarks by Industry – Realistic 2026 Numbers</h1>
+            <p class="text-xl text-slate-600 mb-4">Gross margin is the single biggest predictor of long-term profitability — but every industry has different rules. Here's what realistic numbers look like in 2026.</p>
+            <p class="text-base text-slate-500 italic">Written by operators who’ve run businesses across SaaS, agencies, e-commerce, and marketplaces.</p>
+        </header>
+
+        <section>
+            <h2 class="text-3xl font-bold mb-6">Why gross margin matters more than revenue</h2>
+            <p>
+                Gross margin = (Revenue – Cost of Goods Sold) / Revenue
+            </p>
+            <p class="mt-4">
+                COGS includes only direct costs to serve customers:
+            </p>
+            <ul class="list-disc pl-6 space-y-2 mt-4">
+                <li>Hosting & infrastructure</li>
+                <li>Payment processing fees</li>
+                <li>Customer support (when direct to client)</li>
+                <li>Contractor/freelancer delivery costs</li>
+                <li>Other direct costs to serve customers</li>
+            </ul>
+            <p class="mt-6">
+                As businesses scale, hosting costs per user fall, but enterprise support costs rise — margins may shift up or down depending on how you manage delivery.
+            </p>
+            <p class="mt-4 italic text-slate-600">
+                Low gross margin can turn explosive revenue growth into negative profits.
+            </p>
+        </section>
+
+        <section class="mt-16">
+            <h2 class="text-3xl font-bold mb-6">Gross Margin Benchmarks by Industry (2026)</h2>
+            <div class="overflow-x-auto">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Industry</th>
+                            <th>Strong</th>
+                            <th>Healthy</th>
+                            <th>Caution</th>
+                            <th>Danger</th>
+                            <th>Quick Fix Tip</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>SaaS / Software (B2B or B2C)</td>
+                            <td><span class="good-tag">75–90%</span></td>
+                            <td><span class="good-tag">70–75%</span></td>
+                            <td><span class="caution-tag">60–70%</span></td>
+                            <td><span class="danger-tag"><60%</span></td>
+                            <td>Optimize hosting & usage tiers to push toward 80%+</td>
+                        </tr>
+                        <tr>
+                            <td>Marketplaces / Two-Sided Platforms</td>
+                            <td><span class="good-tag">70–85%</span></td>
+                            <td><span class="good-tag">60–70%</span></td>
+                            <td><span class="caution-tag">50–60%</span></td>
+                            <td><span class="danger-tag"><50%</span></td>
+                            <td>Reduce transaction fees or fraud costs to lift margins</td>
+                        </tr>
+                        <tr>
+                            <td>Agencies / Services (Freelance → Boutique)</td>
+                            <td><span class="good-tag">40–55%</span></td>
+                            <td><span class="good-tag">35–45%</span></td>
+                            <td><span class="caution-tag">30–35%</span></td>
+                            <td><span class="danger-tag"><30%</span></td>
+                            <td>Raise rates or optimize delivery to hit 40%+</td>
+                        </tr>
+                        <tr>
+                            <td>E-commerce / Physical Product SaaS</td>
+                            <td><span class="good-tag">45–65%</span></td>
+                            <td><span class="good-tag">35–45%</span></td>
+                            <td><span class="caution-tag">25–35%</span></td>
+                            <td><span class="danger-tag"><25%</span></td>
+                            <td>Add software subscriptions to boost overall GM</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="my-16 text-center bg-white border border-slate-200 rounded-2xl p-10 shadow-sm">
+            <h3 class="text-2xl font-bold mb-6">Check Your Gross Margin</h3>
+            <a href="/unit-economics.html" class="inline-block bg-blue-600 text-white px-10 py-5 rounded-xl font-bold text-lg hover:bg-blue-700 transition">
+                Open Unit Economics Guide →
+            </a>
+            <p class="text-sm text-slate-500 mt-4">
+                Calculate your real gross margin and see how it impacts profitability.
+            </p>
+        </section>
+
+        <section class="mt-12">
+            <h3 class="text-xl font-bold mb-6">Related Reading & Tools</h3>
+            <ul class="space-y-3">
+                <li><a href="/unit-economics.html" class="standard-link text-blue-600">Unit Economics Guide (Live Tool)</a></li>
+                <li><a href="/guides/ltv-cac-real-math.html" class="standard-link text-blue-600">How to Interpret LTV:CAC Without Lying to Yourself</a></li>
+                <li><a href="/guides/what-mrr-actually-tells-you.html" class="standard-link text-blue-600">What MRR Actually Tells You (and What It Doesn’t)</a></li>
+                <li><a href="/guides/healthy-churn-benchmarks.html" class="standard-link text-blue-600">Healthy Churn Benchmarks by SaaS Stage</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="bg-white border-t py-16 text-slate-500">
+        <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12 text-left">
+            <div>
+                <p class="font-bold mb-4 text-slate-900 text-lg">FounderCalculators.com</p>
+                <p class="text-sm leading-relaxed">Helping founders build sustainable businesses through financial literacy and better modeling.</p>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="about.html" class="standard-link">About Us</a></li>
+                    <li><a href="contact.html" class="standard-link">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Legal</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="privacy.html" class="standard-link">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="standard-link">Terms of Service</a></li>
+                    <li><a href="disclaimer.html" class="standard-link">Earnings Disclaimer</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-12 pt-8 border-t border-slate-100 text-center px-6">
+            <p class="text-xs uppercase tracking-widest opacity-50">&copy; 2026 FounderCalculators. All Rights Reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
