--- a/guides.html
+++ b/guides.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Founder Guides – SaaS Metrics, Benchmarks & Growth Explained</title>
-    <meta name="description" content="Practical founder guides to understand MRR, churn, LTV:CAC, CAC payback, Rule of 40, NRR, and more. No fluff, just actionable insights.">
+    <meta name="description" content="Practical founder guides to understand MRR, churn, LTV:CAC, CAC payback, Rule of 40, NRR, burn multiple, and more. No fluff, just actionable insights.">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .standard-link { transition: color 0.2s; }
@@ -40,10 +40,10 @@
                 <p class="text-slate-600 mb-6">What the numbers really mean — and what they hide.</p>
                 <ul class="space-y-2">
                     <li><a href="/guides/what-mrr-actually-tells-you.html" class="standard-link text-blue-600">What MRR Actually Tells You (and What It Doesn’t)</a></li>
-                    <li><a href="/guides/ltv-cac-real-math.html" class="standard-link text-blue-600">LTV:CAC — The Real Math Founders Ignore</a></li>
-                    <li><a href="/guides/rule-of-40-explained.html" class="standard-link text-blue-600">Rule of 40: Growth vs Profitability Trade-Off</a></li>
-                    <li><a href="/guides/cac-payback-meaning.html" class="standard-link text-blue-600">CAC Payback: Why 12 Months Is the Magic Number</a></li>
-                    <li><a href="/guides/nrr-what-it-really-means.html" class="standard-link text-blue-600">Net Revenue Retention (NRR): The Metric VCs Obsess Over</a></li>
+                    <li><a href="/guides/ltv-cac-real-math.html" class="standard-link text-blue-600">How to Interpret LTV:CAC Without Lying to Yourself</a></li>
+                    <li><a href="/guides/rule-of-40-explained.html" class="standard-link text-blue-600">Rule of 40 Explained: When Growth Hides Problems</a></li>
+                    <li><a href="/guides/cac-payback-meaning.html" class="standard-link text-blue-600">CAC Payback Period: Why 12 Months Is the Magic Number</a></li>
+                    <li><a href="/guides/nrr-what-it-really-means.html" class="standard-link text-blue-600">Net Revenue Retention (NRR): The Metric That Predicts Survival</a></li>
                 </ul>
             </div>
 
@@ -56,9 +56,8 @@
                 </p>
                 <p class="text-slate-600 mb-6">What to track when you're at $0–$10k MRR vs $100k+.</p>
                 <ul class="space-y-2">
-                    <li><a href="/guides/metrics-before-10k-mrr.html" class="standard-link text-blue-600">Before $10k MRR</a></li>
-                    <li><a href="/guides/from-10k-to-50k-mrr.html" class="standard-link text-blue-600">From $10k → $50k MRR: What Should Change</a></li>
-                    <li><a href="/guides/post-100k-mrr-metrics.html" class="standard-link text-blue-600">Post-$100k MRR: The Metrics That Kill You If Ignored</a></li>
+                    <li><a href="/guides/metrics-before-10k-mrr.html" class="standard-link text-blue-600">Metrics That Matter Before $10k MRR (Don’t Obsess Over Vanity)</a></li>
+                    <li><a href="/guides/from-50k-to-250k-mrr.html" class="standard-link text-blue-600">From $50k to $250k MRR: What Numbers Actually Change</a></li>
                     <li><a href="/guides/scaling-to-1m-arr.html" class="standard-link text-blue-600">Scaling to $1M ARR: Churn vs Expansion Battle</a></li>
                 </ul>
             </div>
@@ -74,8 +73,8 @@
                 <ul class="space-y-2">
                     <li><a href="/guides/healthy-churn-benchmarks.html" class="standard-link text-blue-600">Healthy Churn Benchmarks by SaaS Stage</a></li>
                     <li><a href="/guides/is-your-cac-too-high.html" class="standard-link text-blue-600">Is Your CAC Too High? (Realistic Thresholds)</a></li>
-                    <li><a href="/guides/good-gross-margin-by-industry.html" class="standard-link text-blue-600">What “Good” Gross Margin Looks Like by Industry</a></li>
-                    <li><a href="/guides/burn-multiple-when-safe.html" class="standard-link text-blue-600">Burn Multiple: When It’s Safe to Burn Cash</a></li>
+                    <li><a href="/guides/good-gross-margin-by-industry.html" class="standard-link text-blue-600">Gross Margin Benchmarks by Industry – Realistic 2026 Numbers</a></li>
+                    <li><a href="/guides/burn-multiple-when-safe.html" class="standard-link text-blue-600">Burn Multiple: When It’s Safe (and When It Kills You)</a></li>
                 </ul>
             </div>
 
