--- a/cac-ltv-ratio.html
+++ b/cac-ltv-ratio.html
@@ -21,6 +21,12 @@
         .input-focus { transition: all 0.2s; }
         .input-focus:focus { transform: translateY(-1px); }
     </style>
+<!-- Load AdSense from shared file -->
+<script>
+  fetch('/head-ads.html')
+    .then(r => r.text())
+    .then(html => document.head.innerHTML += html);
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
@@ -255,3 +261,4 @@
     </script>
 </body>
 </html>
+
