--- a/convertible-note.html
+++ b/convertible-note.html
@@ -20,6 +20,12 @@
         #conversion-card { transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
         .badge { padding: 2px 8px; border-radius: 9999px; font-size: 10px; font-weight: bold; text-transform: uppercase; }
     </style>
+<!-- Load AdSense from shared file -->
+<script>
+  fetch('/head-ads.html')
+    .then(r => r.text())
+    .then(html => document.head.innerHTML += html);
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
@@ -270,3 +276,4 @@
     </script>
 </body>
 </html>
+
