--- a/debt-repayment.html
+++ b/debt-repayment.html
@@ -21,6 +21,12 @@
         .input-card:focus-within { border-color: #3b82f6; box-shadow: 0 0 0 4px rgba(59,130,246,0.1); }
         .table-row:nth-child(even) { background-color: #f8fafc; }
     </style>
+<!-- Load AdSense from shared file -->
+<script>
+  fetch('/head-ads.html')
+    .then(r => r.text())
+    .then(html => document.head.innerHTML += html);
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
@@ -243,3 +249,4 @@
     </script>
 </body>
 </html>
+
