--- a/email-roi.html
+++ b/email-roi.html
@@ -19,6 +19,12 @@
         .standard-link:hover { color: #2563eb; text-decoration: underline; }
         .input-card:focus-within { border-color: #3b82f6; box-shadow: 0 0 0 4px rgba(59,130,246,0.1); }
     </style>
+<!-- Load AdSense from shared file -->
+<script>
+  fetch('/head-ads.html')
+    .then(r => r.text())
+    .then(html => document.head.innerHTML += html);
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
@@ -121,3 +127,4 @@
     </script>
 </body>
 </html>
+
