--- a/breakeven-analysis.html
+++ b/breakeven-analysis.html
@@ -20,10 +20,8 @@
         #breakeven-chart { transition: all 0.5s ease; }
     </style>
 <!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -212,4 +210,5 @@
     </script>
 </body>
 </html>
+
 
