--- a/burn-rate-runway.html
+++ b/burn-rate-runway.html
@@ -20,11 +20,8 @@
         .calc-card { background: #ffffff; border: 1px solid #e2e8f0; border-radius: 16px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); }
         #runway-progress { transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.4s ease; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -255,4 +252,5 @@
     </script>
 </body>
 </html>
+
 
