--- a/cac-ltv-ratio.html
+++ b/cac-ltv-ratio.html
@@ -21,11 +21,8 @@
         .input-focus { transition: all 0.2s; }
         .input-focus:focus { transform: translateY(-1px); }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -261,4 +258,5 @@
     </script>
 </body>
 </html>
+
 
