--- a/churn-impact.html
+++ b/churn-impact.html
@@ -21,11 +21,8 @@
         .input-card { transition: border-color 0.2s; }
         .input-card:focus-within { border-color: #3b82f6; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -264,4 +261,5 @@
     </script>
 </body>
 </html>
+
 
