--- a/consulting-rate.html
+++ b/consulting-rate.html
@@ -20,11 +20,8 @@
         #capacity-bar { transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s; }
         .input-group:focus-within label { color: #2563eb; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -268,4 +265,5 @@
     </script>
 </body>
 </html>
+
 
