--- a/convertible-note.html
+++ b/convertible-note.html
@@ -20,11 +20,8 @@
         #conversion-card { transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
         .badge { padding: 2px 8px; border-radius: 9999px; font-size: 10px; font-weight: bold; text-transform: uppercase; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -276,4 +273,5 @@
     </script>
 </body>
 </html>
+
 
