--- a/guides.html
+++ b/guides.html
@@ -12,11 +12,8 @@
         .category-card { transition: all 0.2s; }
         .category-card:hover { transform: translateY(-4px); box-shadow: 0 10px 20px -5px rgba(0,0,0,0.1); }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
