--- a/mrr-projector.html
+++ b/mrr-projector.html
@@ -22,11 +22,8 @@
         #growth-trend-bar { transition: width 0.8s ease-in-out; }
         .negative-growth { color: #ef4444 !important; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -247,4 +244,5 @@
     </script>
 </body>
 </html>
+
 
