--- a/unit-economics.html
+++ b/unit-economics.html
@@ -20,11 +20,8 @@
         .input-card:focus-within { border-color: #10b981; box-shadow: 0 0 0 4px rgba(16,185,129,0.1); }
         .progress-fill { transition: width 0.8s ease-out; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -241,4 +238,5 @@
     </script>
 </body>
 </html>
+
 
